--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,5 +1,7 @@
 @import '~antd/dist/antd.css';
 .top-left-corner { border-style: solid; border-top-left-radius: 5px; border-top-width: 1px; border-top-color: green; border-left-color: green; border-left-width: 1px;}
-#expr_value{
+#expr_value, .CodeMirror
+{
     height: 80vh;
 }
+
